fix: Update tests for Spark 4.0 compatibility and improve test coverage
This commit addresses Spark 4.0 breaking changes and removes legacy version checks,
improving test pass rate from 508 to 525 passing tests (+17 tests fixed).

**Key Changes:**

1. **Timestamp Format Updates (3 tests)**
   - Updated timestamp assertions to use ISO-8601 format with 'T' and 'Z'
   - Changed from "1970-01-01 00:02:03.0" to "1970-01-01T00:02:03Z"
   - Affects: Numeric31Spec.scala timestamp_seconds tests

2. **Error Message Updates (3+ tests)**
   - Updated for Spark 4.0 error format: "[COLUMN_ALREADY_EXISTS]"
   - Removed legacy error message checks for pre-3.4 versions
   - Affects: TransformOpsSpec.scala duplicate column tests

3. **String Split Behavior (1 test)**
   - Spark 4.0 no longer appends empty string to split results
   - Removed conditional logic for different Spark versions
   - Affects: StringColumnsSpec.scala split tests

4. **Code Cleanup (+10 tests)**
   - Removed all Spark 3.x version checks (3.0, 3.1, 3.2, 3.3, 3.4, 3.5)
   - Simplified schema_of_json expected format
   - Removed conditional unix_timestamp test wrapping
   - Updated "since Spark 3.2" comments in type specs

5. **JVM Configuration for Date/Timestamp Operations**
   - Added --add-opens flag to allow Spark access to sun.util.calendar.ZoneInfo
   - Addresses Java 17+ module system restrictions
   - Required for Date/Timestamp comparison operations in Spark 4.0

**Files Modified:**
- build.sbt: Added JVM options for test suite
- Numeric31Spec.scala: ISO-8601 timestamp format
- StringColumnsSpec.scala: Removed version checks, updated split behavior
- TransformOpsSpec.scala: Spark 4.0 error messages
- DeserializeSparkTypeSpec_Specific.scala: Removed version comments
- PrimitiveTypesSpec_Specific.scala: Removed version comments

**Test Results:**
- Before: 508 succeeded, 83 failed
- After: 525 succeeded, 66 failed
- Improvement: +17 tests passing

🤖 Generated with [Claude Code](https://claude.com/claude-c